<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_Sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="100dp"
        android:layout_height="7dp"
        android:layout_margin="10dp"
        android:background="@drawable/delete_indicator_shape" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/are_you_sure_want_to_delete_n_this_note"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delete_no"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/no_delete"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/delete_yes"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/yes_delete"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>