<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical"
    tools:context=".Activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/notesTitle"
        android:layout_marginEnd="16dp"
        android:hint="@string/title"
        android:background="@drawable/edit_txt_back"
        android:padding="15dp"
        android:fontFamily="@font/regular"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/notesSubtitle"
        android:layout_marginEnd="16dp"
        android:hint="@string/subtitle"
        android:background="@drawable/edit_txt_back"
        android:padding="15dp"
        android:fontFamily="@font/regular"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/greenPriority"
            android:layout_margin="10dp"
            android:background="@drawable/green_shape"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/yellowPriority"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_shape"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:id="@+id/redPriority"
            android:background="@drawable/red_shape"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/notesData"
        android:background="@drawable/edit_txt_back"
        android:padding="15dp"
        android:hint="@string/notes"
        android:gravity="start"
        android:fontFamily="@font/regular"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="text" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/doneNotesBtn"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_done_24"
        android:backgroundTint="@color/orange"
        tools:ignore="ContentDescription" />

</RelativeLayout>