<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical"
    tools:context=".Activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/upTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_txt_back"
            android:fontFamily="@font/regular"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/upSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_txt_back"
            android:fontFamily="@font/regular"
            android:hint="@string/subtitle"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/regular"
                android:text="@string/priority"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/greenPriority"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_done_24"
                android:background="@drawable/green_shape"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/yellowPriority"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_shape"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:id="@+id/redPriority"
                android:background="@drawable/red_shape"/>
        </LinearLayout>

        <EditText
            android:id="@+id/upNotes"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_txt_back"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:hint="@string/notes"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_baseline_done_24"
        tools:ignore="ContentDescription" />

</RelativeLayout>